# ML-Debugging-Agent

./: .gitignore  CMakeLists.advanced.txt  CMakeLists.txt  Dockerfile  Dockerfile.quantum  LICENSE  README.md  Virtual-Me-README.md  build.bat  build.sh  build_ultimate.bat  build_ultimate.sh  docker-compose.quantum.yml  parser_test.cpp  render.yaml  requirements-optional.txt  requirements.txt  run_local.bat  run_local.ps1  test_compile.cpp
.github/workflows/: python-ci.yml
backend/: __init__.py  analyzer.py  app.py  evaluator.py  file_parsing.py  history.py  knowledge_base.py  pipeline.py  reporting.py
data/: failure_modes.json  sample_report.json  test_cases.json
data/history/: analysis_history.jsonl
examples/: sample_config.json  sample_losses.csv
frontend/: index.html
include/: advanced_features.h  catalog.h  consciousness_ai.h  enterprise_features.h  experimental_features.h  main_includes.h  parser.h  quantum_features.h  query_engine.h  security_features.h  server.h  spacetime_engine.h  storage.h  types.h
src/: catalog.cpp  main.cpp  parser.cpp  query_engine.cpp  server.cpp  storage.cpp  types.cpp
tests/: __init__.py  test_pipeline.py
